src/main/resources/tests/Semantics/good/functionReturnType.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
function ExampleFunction (X : integer) return integer is
begin
   return X + 1;
end ExampleFunction;
begin
   X := ExampleFunction (2); -- X bien integer
end ExampleProcedure;
